Alignment / spacing fixes to ordersummary and orderdetail

--- a/src/Presentation/Nop.Web/Themes/PlantedampTheme/Content/css/styles.css
+++ b/src/Presentation/Nop.Web/Themes/PlantedampTheme/Content/css/styles.css
@@ -574,7 +574,7 @@ body {
 .product-grid .item-box {
   width: calc(33.33% - 20px);
   margin: 0px;
-  padding: 15px 15px;
+  padding: 5px 5px;
   border-radius: 3px;
   background: #fff;
   /*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
@@ -610,7 +610,7 @@ body {
 }
 
 .product-grid .item-box .product-title {
-  padding: 15px 0px 0 0;
+  padding: 4px 0px 0 0;
   margin: 0;
   font-weight: 900;
   font-size: 1rem;
